--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1,1 +1,278 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;500;700&family=Pattaya&family=Ubuntu:wght@400;500;700&display=swap");
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+*,
+*::after,
+*::before {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+ul[class],
+ol[class] {
+  padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+ul[class] {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+html,
+body {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: "Montserrat", sans-serif;
+  background-color: #4d4a8b;
+  height: 100%;
+}
+
+p {
+  color: white;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
+.container {
+  max-width: 70rem;
+  margin: 0 auto;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.title {
+  font-family: "Pattaya", sans-serif;
+  color: white;
+  font-size: 34px;
+  line-height: 40px;
+}
+
+.button {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  border: none;
+  padding: 1vw 2vw;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  background: #db1a26;
+  border-radius: 50px;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: #ff000f;
+}
+
+.button:active {
+  background-color: #bb0510;
+}
+
+.header {
+  background-color: rgba(196, 196, 196, 0.3);
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80px;
+}
+
+.menu__list {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.menu__list-link {
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 40px;
+  color: white;
+  text-decoration: none;
+  padding: 0 20px;
+}
+
+.footer {
+  height: 80px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  background-color: #213e5a;
+  font-size: 20px;
+  line-height: 26px;
+  text-align: center;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 80px;
+}
+
+.footer__main-content {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.footer__main-content p {
+  padding-left: 10px;
+}
+
+.social-icon {
+  height: 28px;
+  display: inline-block;
+}
+
+.c-icon {
+  height: 28px;
+  display: inline-block;
+}
+
+.about {
+  background-image: url("../img/start/aboutBG.png");
+  background-size: cover;
+  padding-top: 260px;
+}
+
+.about__inner {
+  text-align: center;
+}
+
+.about__inner .title {
+  padding-bottom: 100px;
+}
+
+.about__inner p {
+  padding-bottom: 210px;
+}
+
+.achievements {
+  background: rgba(111, 100, 129, 0.7);
+  text-align: center;
+}
+
+.achievements * {
+  font-family: "Montserrat", sans-serif;
+  font-size: 22px;
+  line-height: 40px;
+  font-weight: 800;
+}
+
+.achievements__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.achievements__side {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 270px;
+  width: 33.33333%;
+}
+
+.achievements__side-text {
+  width: 180px;
+}
+
+.achievements__midl {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 270px;
+  width: 33.33333%;
+  background: #40286a;
+}
+/*# sourceMappingURL=style.css.map */
