add restaurants-list page

--- a/project/saas/base/_button.scss
+++ b/project/saas/base/_button.scss
@@ -1,8 +1,9 @@
 .button {
+  cursor: pointer;
   font-family: "Ubuntu", sans-serif;
   font-weight: 400;
   font-size: 14px;
-
+  color: black;
   border: none;
   padding: 1vw 2vw;
   align-items: center;
