--- a/project/saas/style.scss
+++ b/project/saas/style.scss
@@ -15,5 +15,9 @@
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/icons";
+@import "blocks/filter";
 @import "blocks/about";
 @import "blocks/achievements";
+@import "blocks/search-liine";
+@import "blocks/restaurants";
+@import "blocks/restaurant-info";
