--- a/project/css/style.css
+++ b/project/css/style.css
@@ -51,7 +51,10 @@ select {
   font: inherit;
 }
 
-a {
+a:link,
+a:visited,
+a:hover,
+a:active {
   text-decoration: none;
 }
 
@@ -63,6 +66,7 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: #4d4a8b;
   height: 100%;
+  color: white;
 }
 
 p {
@@ -70,6 +74,13 @@ p {
   font-size: 18px;
   line-height: 22px;
   font-family: "Montserrat", sans-serif;
+}
+
+h5 {
+  color: white;
+  font-size: 20px;
+  font-family: "Ubuntu", sans-serif;
+  line-height: 26px;
 }
 
 .wrapper {
@@ -103,10 +114,19 @@ p {
   line-height: 40px;
 }
 
+.sub-titile {
+  font-size: 28px;
+  line-height: 32px;
+  width: 600;
+  font-family: "Ubuntu", sans-serif;
+}
+
 .button {
+  cursor: pointer;
   font-family: "Ubuntu", sans-serif;
   font-weight: 400;
   font-size: 14px;
+  color: black;
   border: none;
   padding: 1vw 2vw;
   -webkit-box-align: center;
@@ -209,6 +229,24 @@ p {
   display: inline-block;
 }
 
+.find-icon {
+  width: 32px;
+  height: 32px;
+}
+
+.filter {
+  text-align: center;
+  position: fixed;
+  right: 0;
+  width: 33.333%;
+  height: 100px;
+  background: rgba(27, 24, 196, 0.3);
+}
+
+.filter__inner {
+  padding-top: 10px;
+}
+
 .about {
   background-image: url("../img/start/aboutBG.png");
   background-size: cover;
@@ -274,5 +312,151 @@ p {
   height: 270px;
   width: 33.33333%;
   background: #40286a;
+}
+
+.search-line {
+  margin-top: 80px;
+  background-color: #b62174;
+}
+
+.search-form {
+  height: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-form__input {
+  margin-left: 8vw;
+  height: 48px;
+  width: 605px;
+  background: rgba(229, 229, 229, 0.8);
+  border-radius: 60px;
+  border: none;
+}
+
+.search-form__button {
+  position: relative;
+  right: 40px;
+}
+
+.restaurants {
+  text-align: center;
+}
+
+.restaurants__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.restaurants-list {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 10px;
+  -ms-grid-rows: (1fr)[1];
+  -ms-grid-columns: (1fr)[3];
+      grid-template: repeat(1, 1fr)/repeat(3, 1fr);
+  grid-auto-flow: row;
+  /* or 'row', 'row dense', 'column dense' */
+  width: 70%;
+}
+
+.restaurants-list__item {
+  border-radius: 15px;
+  padding: 15px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 240px;
+  height: auto;
+  background: rgba(18, 156, 233, 0.72);
+}
+
+.restaurants-list__item h5 {
+  padding-top: 15px;
+  padding-bottom: 8px;
+}
+
+.restaurant-avatar {
+  width: 160px;
+  height: 100px;
+  border-radius: 50px;
+}
+
+.restaurant-info {
+  height: 200px;
+  background: rgba(27, 24, 196, 0.4);
+}
+
+.restaurant-info__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 80px;
+}
+
+.main-info {
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-info .restaurant-avatar {
+  width: 180px;
+  height: 180px;
+  border-radius: 100%;
+}
+
+.main-info-text__inner {
+  margin-left: 5vw;
+}
+
+.sub-info__inner {
+  padding-top: 12px;
+}
+
+.sub-info__inner p {
+  padding: 6px 0;
+}
+
+.booking {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space;
+      -ms-flex-pack: space;
+          justify-content: space;
+}
+
+.booking__inner p {
+  margin-bottom: 16px;
 }
 /*# sourceMappingURL=style.css.map */
