--- a/project/saas/base/_global.scss
+++ b/project/saas/base/_global.scss
@@ -6,6 +6,7 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: #4d4a8b;
   height: 100%;
+  color: white;
 }
 
 p {
@@ -13,6 +14,13 @@ p {
   font-size: 18px;
   line-height: 22px;
   font-family: "Montserrat", sans-serif;
+}
+
+h5 {
+  color: white;
+  font-size: 20px;
+  font-family: "Ubuntu", sans-serif;
+  line-height: 26px;
 }
 
 .wrapper {
