--- a/project/saas/base/_typography.scss
+++ b/project/saas/base/_typography.scss
@@ -4,3 +4,10 @@
   font-size: 34px;
   line-height: 40px;
 }
+
+.sub-titile {
+  font-size: 28px;
+  line-height: 32px;
+  width: 600;
+  font-family: "Ubuntu", sans-serif;
+}
