--- a/project/saas/blocks/_restaurant-info.scss
+++ b/project/saas/blocks/_restaurant-info.scss
@@ -17,8 +17,7 @@
     border-radius: 100%;
   }
 }
-.restaurant-avatar {
-}
+
 .main-info-text {
   &__inner {
     margin-left: 5vw;
@@ -33,7 +32,7 @@
     }
   }
 }
-.booking {
+.booking-block {
   display: flex;
   flex-direction: row;
   align-items: center;
