--- a/project/saas/base/_typography.scss
+++ b/project/saas/base/_typography.scss
@@ -5,9 +5,23 @@
   line-height: 40px;
 }
 
+p {
+  color: white;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: "Montserrat", sans-serif;
+}
+
 .sub-titile {
   font-size: 28px;
   line-height: 32px;
   width: 600;
   font-family: "Ubuntu", sans-serif;
+}
+
+h5 {
+  color: white;
+  font-size: 20px;
+  font-family: "Ubuntu", sans-serif;
+  line-height: 26px;
 }
