--- a/project/saas/base/_typography.scss
+++ b/project/saas/base/_typography.scss
@@ -1,27 +1,28 @@
 .title {
   font-family: "Pattaya", sans-serif;
   color: white;
-  font-size: 34px;
+  font-size: 2.5vw;
   line-height: 40px;
 }
 
 p {
   color: white;
-  font-size: 18px;
-  line-height: 22px;
+  font-weight: 400;
+  font-size: 1.4vw;
+  line-height: 1.6vw;
   font-family: "Montserrat", sans-serif;
 }
 
 .sub-titile {
-  font-size: 28px;
-  line-height: 32px;
+  font-size: 1.8vw;
+  line-height: 2vw;
   width: 600;
   font-family: "Ubuntu", sans-serif;
 }
 
 h5 {
   color: white;
-  font-size: 20px;
+  font-size: 1.6vw;
   font-family: "Ubuntu", sans-serif;
-  line-height: 26px;
+  line-height: 1.8vw;
 }
