--- a/project/saas/blocks/_edit-form.scss
+++ b/project/saas/blocks/_edit-form.scss
@@ -37,3 +37,19 @@
     width: 30%;
   }
 }
+
+@media (max-width: 1200px) {
+  .edit-form {
+    &__inner {
+      width: 50%;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .edit-form {
+    &__inner {
+      width: 70%;
+    }
+  }
+}
