--- a/project/saas/blocks/_login-header.scss
+++ b/project/saas/blocks/_login-header.scss
@@ -14,22 +14,66 @@
   .title {
     font-family: "Open Sans", sans-serif;
     font-weight: 800;
-    font-size: 90px;
-    line-height: 100px;
+    font-size: 6vw;
+    line-height: 7vw;
   }
   .sub-title {
-    font-size: 34px;
+    font-size: 2.4vw;
     font-family: "Open Sans", sans-serif;
-    line-height: 50px;
+    line-height: 3.5vw;
   }
 
   p {
     margin-top: 8px;
-    line-height: 30px;
-    font-size: 24px;
+    line-height: 2vw;
+    font-size: 1.6vw;
     text-align: center;
   }
 }
 .login-avatar {
   height: 240px;
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 992px) {
+}
+
+@media (max-width: 767px) {
+  .login-header {
+    background: rgba(83, 219, 36, 0.6);
+
+    height: 240px;
+    &__inner {
+      height: 240px;
+      align-items: center;
+      display: flex;
+      justify-content: space-around;
+    }
+    &__text {
+      width: 36%;
+    }
+    .title {
+      font-family: "Open Sans", sans-serif;
+      font-weight: 800;
+      font-size: 8vw;
+      line-height: 12vw;
+    }
+    .sub-title {
+      font-size: 4.2vw;
+      font-family: "Open Sans", sans-serif;
+      line-height: 4.4vw;
+    }
+
+    p {
+      margin-top: 8px;
+      line-height: 3.4vw;
+      font-size: 2.6vw;
+      text-align: center;
+    }
+  }
+  .login-avatar {
+    height: 200px;
+  }
 }
