--- a/project/css/style.css
+++ b/project/css/style.css
@@ -61,8 +61,8 @@ a:active {
 html,
 body {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 1.2vw;
+  line-height: 1.3vw;
   font-family: "Montserrat", sans-serif;
   background-color: #4d4a8b;
   height: 100%;
@@ -87,7 +87,7 @@ body {
 }
 
 .container {
-  width: 88vw;
+  max-width: 1230px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -99,56 +99,73 @@ body {
 
 .avatar {
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 7vw;
+  height: 7vw;
 }
 
-.personal-wrapper {
-  background: -webkit-gradient(linear, left top, right top, color-stop(65.7%, #524178), color-stop(40%, #3a3961));
-  background: linear-gradient(90deg, #524178 65.7%, #3a3961 40%);
-  height: 524px;
+@media (max-width: 1200px) {
+  .container {
+    max-width: 970px;
+  }
 }
 
-.personal-wrapper__inner {
-  margin-top: 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    max-width: none;
+  }
+  .title {
+    font-size: 4vw;
+  }
+  p {
+    font-size: 3vw;
+    line-height: 3.2vw;
+  }
+  .avatar {
+    width: 10vw;
+    height: 10vw;
+  }
 }
 
 .title {
   font-family: "Pattaya", sans-serif;
   color: white;
-  font-size: 34px;
+  font-size: 2.5vw;
   line-height: 40px;
 }
 
 p {
   color: white;
-  font-size: 18px;
-  line-height: 22px;
+  font-weight: 400;
+  font-size: 1.4vw;
+  line-height: 1.6vw;
   font-family: "Montserrat", sans-serif;
 }
 
 .sub-titile {
-  font-size: 28px;
-  line-height: 32px;
+  font-size: 1.8vw;
+  line-height: 2vw;
   width: 600;
   font-family: "Ubuntu", sans-serif;
 }
 
 h5 {
   color: white;
-  font-size: 20px;
+  font-size: 1.6vw;
   font-family: "Ubuntu", sans-serif;
-  line-height: 26px;
+  line-height: 1.8vw;
 }
 
 .button {
   cursor: pointer;
   font-family: "Ubuntu", sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 1vw;
   color: black;
   border: none;
   padding: 0.6vw 2vw;
@@ -289,11 +306,23 @@ h5 {
           align-items: center;
 }
 
+@media (max-width: 992px) {
+  .my-restaurants-list__item {
+    height: 100px;
+  }
+}
+
+@media (max-width: 700px) {
+  .my-restaurants-list__item {
+    height: 80px;
+  }
+}
+
 .filter {
   text-align: center;
   position: fixed;
   right: 0;
-  width: 33.333%;
+  width: 28%;
   height: 100px;
   background: rgba(27, 24, 196, 0.3);
 }
@@ -302,8 +331,20 @@ h5 {
   padding-top: 10px;
 }
 
+@media (max-width: 1200px) {
+  .filter {
+    width: 22%;
+  }
+}
+
+@media (max-width: 747px) {
+  .filter {
+    width: 40%;
+  }
+}
+
 .scheme {
-  width: 80%;
+  max-width: 80%;
   height: 300px;
   background: #c4c4c4;
 }
@@ -320,6 +361,14 @@ h5 {
 
 .add-scheme-form__inner .input {
   margin: 16px 0;
+}
+
+@media (max-width: 767px) {
+  label,
+  select {
+    font-size: 3vw;
+    line-height: 3.2vw;
+  }
 }
 
 .about {
@@ -347,7 +396,7 @@ h5 {
 
 .achievements * {
   font-family: "Montserrat", sans-serif;
-  font-size: 22px;
+  font-size: 1.5vw;
   line-height: 40px;
   font-weight: 800;
 }
@@ -372,7 +421,7 @@ h5 {
 }
 
 .achievements__side-text {
-  width: 180px;
+  width: 12vw;
 }
 
 .achievements__midl {
@@ -387,6 +436,18 @@ h5 {
   height: 270px;
   width: 33.33333%;
   background: #40286a;
+}
+
+@media (max-width: 767px) {
+  .achievements__side {
+    height: 100px;
+  }
+  .achievements__side-text {
+    width: 12vw;
+  }
+  .achievements__midl {
+    height: 100px;
+  }
 }
 
 .search-line {
@@ -472,6 +533,25 @@ h5 {
   border-radius: 50px;
 }
 
+@media (max-width: 992px) {
+  .restaurants-list {
+    -ms-grid-rows: (1fr)[1];
+    -ms-grid-columns: (1fr)[2];
+        grid-template: repeat(1, 1fr)/repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 747px) {
+  .restaurants-list {
+    -ms-grid-rows: (1fr)[1];
+    -ms-grid-columns: (1fr)[1];
+        grid-template: repeat(1, 1fr)/repeat(1, 1fr);
+  }
+  .restaurants-list__item {
+    width: 240px;
+  }
+}
+
 .restaurant-info {
   height: 200px;
   background: rgba(27, 24, 196, 0.4);
@@ -535,6 +615,20 @@ h5 {
   margin-bottom: 16px;
 }
 
+@media (max-width: 767px) {
+  .restaurant-info {
+    height: 140px;
+  }
+  .main-info {
+    height: 140px;
+  }
+  .main-info .restaurant-avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+  }
+}
+
 .reviews {
   text-align: center;
 }
@@ -560,6 +654,13 @@ h5 {
   padding-top: 24px;
 }
 
+.create-review__select {
+  width: 5vw;
+  height: 2vw;
+  background-color: rebeccapurple;
+  border-radius: 20px;
+}
+
 .create-review__textarea {
   margin: 0 32px;
   resize: none;
@@ -577,6 +678,7 @@ h5 {
   height: 100px;
   background: rgba(18, 156, 233, 0.72);
   margin-top: 12px;
+  border-radius: 36px;
 }
 
 .reviews-list__item-info {
@@ -603,6 +705,15 @@ h5 {
 .reviews-list__item-text {
   padding-top: 14px;
   text-align: left;
+}
+
+@media (max-width: 767px) {
+  .create-review__select {
+    width: 10vw;
+    height: 4vw;
+    background-color: rebeccapurple;
+    border-radius: 20px;
+  }
 }
 
 .booking {
@@ -755,9 +866,39 @@ h5 {
 }
 
 .personal-avatar {
-  width: 300px;
-  height: 300px;
+  width: 20vw;
+  height: 20vw;
   border-radius: 100%;
+}
+
+.personal-wrapper {
+  background: -webkit-gradient(linear, left top, right top, color-stop(65.7%, #524178), color-stop(40%, #3a3961));
+  background: linear-gradient(90deg, #524178 65.7%, #3a3961 40%);
+  height: 524px;
+}
+
+.personal-wrapper__inner {
+  margin-top: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+
+.personal-wrapper .container {
+  height: 100%;
+}
+
+@media (max-width: 992px) {
+  .personal-wrapper {
+    height: 380px;
+  }
+}
+
+@media (max-width: 767px) {
+  .personal-wrapper {
+    height: 280px;
+  }
 }
 
 .contact-info {
@@ -766,8 +907,10 @@ h5 {
 }
 
 .contact-info__inner {
+  position: relative;
   padding: 12px;
   padding-top: 24px;
+  height: 100%;
 }
 
 .contact-info__row {
@@ -787,7 +930,7 @@ h5 {
 
 .contact-info .button {
   position: absolute;
-  bottom: 140px;
+  bottom: 20px;
   right: 20px;
 }
 
@@ -841,14 +984,26 @@ h5 {
   width: 30%;
 }
 
+@media (max-width: 1200px) {
+  .edit-form__inner {
+    width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  .edit-form__inner {
+    width: 70%;
+  }
+}
+
 .login {
   background: rgba(0, 0, 0, 0.6);
-  padding: 60px 0;
+  padding: 72px 0;
 }
 
 .login-form {
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
   width: 60%;
 }
 
@@ -867,6 +1022,12 @@ h5 {
   padding-top: 7px;
   display: block;
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  .login {
+    padding: 70px 0;
+  }
 }
 
 .login-header {
@@ -893,25 +1054,66 @@ h5 {
 .login-header .title {
   font-family: "Open Sans", sans-serif;
   font-weight: 800;
-  font-size: 90px;
-  line-height: 100px;
+  font-size: 6vw;
+  line-height: 7vw;
 }
 
 .login-header .sub-title {
-  font-size: 34px;
+  font-size: 2.4vw;
   font-family: "Open Sans", sans-serif;
-  line-height: 50px;
+  line-height: 3.5vw;
 }
 
 .login-header p {
   margin-top: 8px;
-  line-height: 30px;
-  font-size: 24px;
+  line-height: 2vw;
+  font-size: 1.6vw;
   text-align: center;
 }
 
 .login-avatar {
   height: 240px;
+}
+
+@media (max-width: 767px) {
+  .login-header {
+    background: rgba(83, 219, 36, 0.6);
+    height: 240px;
+  }
+  .login-header__inner {
+    height: 240px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .login-header__text {
+    width: 36%;
+  }
+  .login-header .title {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 800;
+    font-size: 8vw;
+    line-height: 12vw;
+  }
+  .login-header .sub-title {
+    font-size: 4.2vw;
+    font-family: "Open Sans", sans-serif;
+    line-height: 4.4vw;
+  }
+  .login-header p {
+    margin-top: 8px;
+    line-height: 3.4vw;
+    font-size: 2.6vw;
+    text-align: center;
+  }
+  .login-avatar {
+    height: 200px;
+  }
 }
 
 .my-restaurants {
@@ -927,7 +1129,7 @@ h5 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0 60px;
+  padding: 0 4vw;
 }
 
 .my-restaurants-list__item-info {
