--- a/project/saas/base/_button.scss
+++ b/project/saas/base/_button.scss
@@ -2,7 +2,7 @@
   cursor: pointer;
   font-family: "Ubuntu", sans-serif;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 1vw;
   color: black;
   border: none;
   padding: 0.6vw 2vw;
