--- a/project/saas/base/_global.scss
+++ b/project/saas/base/_global.scss
@@ -1,8 +1,8 @@
 html,
 body {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
+  font-size: 1.2vw;
+  line-height: 1.3vw;
   font-family: "Montserrat", sans-serif;
   background-color: #4d4a8b;
   height: 100%;
@@ -20,7 +20,8 @@ body {
 }
 
 .container {
-  width: 88vw;
+  // width: 88vw;
+  max-width: 1230px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -32,15 +33,35 @@ body {
 
 .avatar {
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 7vw;
+  height: 7vw;
 }
 
-.personal-wrapper {
-  background: linear-gradient(90deg, #524178 65.7%, #3a3961 40%);
-  height: 524px;
-  &__inner {
-    margin-top: 80px;
-    display: flex;
+@media (max-width: 1200px) {
+  .container {
+    max-width: 970px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    max-width: none;
+  }
+  .title {
+    font-size: 4vw;
+  }
+  p {
+    font-size: 3vw;
+    line-height: 3.2vw;
+  }
+  .avatar {
+    width: 10vw;
+    height: 10vw;
   }
 }
