--- a/project/saas/blocks/_list.scss
+++ b/project/saas/blocks/_list.scss
@@ -20,3 +20,19 @@
     align-items: center;
   }
 }
+
+@media (max-width: 992px) {
+  .my-restaurants-list {
+    &__item {
+      height: 100px;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .my-restaurants-list {
+    &__item {
+      height: 80px;
+    }
+  }
+}
