--- a/project/saas/blocks/_login.scss
+++ b/project/saas/blocks/_login.scss
@@ -1,10 +1,10 @@
 .login {
   background: rgba(0, 0, 0, 0.6);
-  padding: 60px 0;
+  padding: 72px 0;
 }
 .login-form {
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
   width: 60%;
   &__item {
     padding-top: 32px;
@@ -19,5 +19,11 @@
     padding-top: 7px;
     display: block;
     text-align: center;
+  }
+}
+
+@media (max-width: 767px) {
+  .login {
+    padding: 70px 0;
   }
 }
