--- a/project/saas/blocks/_my-restaurants.scss
+++ b/project/saas/blocks/_my-restaurants.scss
@@ -4,13 +4,11 @@
     margin-top: 80px;
     padding-top: 22px;
   }
-  .button {
-  }
 }
 .my-restaurants-list {
   &__item {
     justify-content: space-between;
-    padding: 0 60px;
+    padding: 0 4vw;
   }
   &__item-info {
     align-items: center;
@@ -22,7 +20,5 @@
       margin-top: 8px;
     }
     padding-left: 24px;
-  }
-  .avatar {
   }
 }
