--- a/project/saas/blocks/_restaurant-info.scss
+++ b/project/saas/blocks/_restaurant-info.scss
@@ -43,3 +43,17 @@
     }
   }
 }
+
+@media (max-width: 767px) {
+  .restaurant-info {
+    height: 140px;
+  }
+  .main-info {
+    height: 140px;
+    .restaurant-avatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 100%;
+    }
+  }
+}
