--- a/project/saas/blocks/_restaurants.scss
+++ b/project/saas/blocks/_restaurants.scss
@@ -35,3 +35,21 @@
   height: 100px;
   border-radius: 50px;
 }
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 992px) {
+  .restaurants-list {
+    grid-template: repeat(1, 1fr) / repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 747px) {
+  .restaurants-list {
+    &__item {
+      width: 240px;
+    }
+    grid-template: repeat(1, 1fr) / repeat(1, 1fr);
+  }
+}
