--- a/project/saas/blocks/_reviews.scss
+++ b/project/saas/blocks/_reviews.scss
@@ -14,6 +14,10 @@
     padding-top: 24px;
   }
   &__select {
+    width: 5vw;
+    height: 2vw;
+    background-color: rebeccapurple;
+    border-radius: 20px;
   }
   &__textarea {
     margin: 0 32px;
@@ -32,6 +36,7 @@
     height: 100px;
     background: rgba(18, 156, 233, 0.72);
     margin-top: 12px;
+    border-radius: 36px;
   }
   &__item-info {
     justify-content: space-between;
@@ -48,5 +53,16 @@
   &__item-text {
     padding-top: 14px;
     text-align: left;
+  }
+}
+
+@media (max-width: 767px) {
+  .create-review {
+    &__select {
+      width: 10vw;
+      height: 4vw;
+      background-color: rebeccapurple;
+      border-radius: 20px;
+    }
   }
 }
